test/compilable/objc/objc_metaclass_type.d
// PLATFORM: osx

extern (Objective-C)
interface ObjcObject {
}

extern (Objective-C)
class NSObject : ObjcObject {
}

ObjcObject.Class c;
NSObject.Class d;