test/fail_compilation/objc/objc_class.d

extern (Objective-C)
interface ObjcObject {

}

void main() {
    auto c = ObjcObject.class;
}